apps/web-rewards/src/app/user/id/page.module.css
.container {
  display: flex;
  height: 100%;
  width: 100%;
  padding: 25px;
  gap: 15px;
}

.profile-container {
  align-items: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
  background-color: var(--ui-kit-neutral-800);
  border-radius: 10px;
  outline: 2px var(--ui-kit-secondary-400) solid;
  padding: 25px;
  gap: 25px;
  height: fit-content;
  width: 100%;
  max-width: 400px;
}

.borders-section {
  align-items: center;
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  width: fit-content;
}

@media screen and (max-width: 850px) {
  .container {
    align-items: center;
    flex-direction: column;
    justify-content: center;
  }
}

